--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -18,6 +18,8 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    outputs: 
+      script-file: ${{ steps.publish.outputs.script-file }}
     steps:
       - name: Get code
         uses: actions/checkout@v3
@@ -25,6 +27,12 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Publish JS filename
+        id: publish
+        run: |
+          script_file=$(find dist/assets -name '*.js' -type f | head -n 1)
+          echo "script-file=$script_file" >> $GITHUB_OUTPUT 
+        # run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -43,5 +51,7 @@ jobs:
           name: dist-files
       - name: Output contents
         run: ls
+      - name: output filename
+        run: echo "JS file to deploy: ${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
