--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -52,6 +52,6 @@ jobs:
       - name: Output contents
         run: ls
       - name: output filename
-        run: echo "JS file to deploy: ${{ needs.build.outputs.script-file }}"
+        run: echo "JS file to deploy ${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
