--- a/.github/workflows/demo2.yml
+++ b/.github/workflows/demo2.yml
@@ -1,67 +1,81 @@
 name: Deploy website
+
 on:
   push:
     branches:
       - main
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Get code
+      - name: Checkout Code
         uses: actions/checkout@v3
-      - name: Cache dependencies
-        uses: actions/cache@v4
+
+      - name: Cache node_modules
+        uses: actions/cache@v3
         with:
-          path: ~/.npm
+          path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: deps-node-modules-
+
       - name: Install dependencies
         run: npm ci
+
       - name: Lint code
         run: npm run lint
+
       - name: Test code
         run: npm run test
+
   build:
     needs: test
     runs-on: ubuntu-latest
     outputs: 
       script-file: ${{ steps.publish.outputs.script-file }}
     steps:
-      - name: Get code
+      - name: Checkout Code
         uses: actions/checkout@v3
-      - name: Cache dependencies
-        uses: actions/cache@v4
+
+      - name: Cache node_modules
+        uses: actions/cache@v3
         with:
-          path: ~/.npm
+          path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: deps-node-modules-
+
       - name: Install dependencies
         run: npm ci
+
       - name: Build website
         run: npm run build
+
       - name: Publish JS filename
         id: publish
         run: |
           script_file=$(find dist/assets -name '*.js' -type f | head -n 1)
-          echo "script-file=$script_file" >> $GITHUB_OUTPUT 
-        # run: find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
+          echo "script-file=$script_file" >> $GITHUB_OUTPUT
+
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: dist-files
           path: dist
-          # path: |
-          #   dist
-          #   package.json
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Get build artifacts
+      - name: Download Build Artifacts
         uses: actions/download-artifact@v4
         with: 
           name: dist-files
-      - name: Output contents
+
+      - name: Output Contents
         run: ls
-      - name: output filename
-        run: echo "JS file to deploy ${{ needs.build.outputs.script-file }}"
+
+      - name: Output File Name
+        run: echo "JS file to deploy: ${{ needs.build.outputs.script-file }}"
+
       - name: Deploy
-        run: echo "Deploying..."
+        run: echo "🚀 Deploying..."
